# engischool-nsu-oop-2022

./: CMakeLists.txt  Date.cpp  Date.h  Matrix.cpp  Matrix.h  README.md  main  main.cpp
lab/: CMakeLists.txt  Matrix.cpp  Matrix.h  README.md  main.cpp
